# kitecast

./: .env.example  .gitignore  README.md  bot.py  config.py  database.py  pyproject.toml  requirements.txt
cogs/: forecast.py  session.py
deploy/: kitebot.service
docs/: bot.md  config.md  database.md  forecast.md  index.md  session.md
tests/: conftest.py  test_database.py  test_session_cog.py  test_session_logic.py
