[project]
name = "kitecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "discord-py>=2.3.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2026.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "notebook>=7.2.1",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cogs*"]

[tool.setuptools]
py-modules = ["bot", "config", "database"]


